[package]
name = "nds-testing-rs"
version = "0.1.0"
authors = ["Kamefrede <kamefrede@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.nds-sys]
path = "C:\\dev\\nds-rs\\nds-sys"

[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
