[package]
name = "nds-testing"
version = "0.1.0"
authors = ["Kamefrede <kamefrede@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.nds-sys]
git = "https://github.com/Kamefrede/nds-rs"

[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
